+add soure to jar

--- a/life-web-app/src/main/webapp/index.html
+++ b/life-web-app/src/main/webapp/index.html
@@ -8,6 +8,8 @@
                 var _nodeApplet = document.createElement("object");
                 _nodeApplet.setAttribute("type", "application/x-java-applet");
                 _nodeApplet.setAttribute("code", "telemedic.lab.ru.life.client.main.ApplicationClient");
+                _nodeApplet.setAttribute("archive", "./lib/life-client-1.0-SNAPSHOT.jar");
+                
                 document.body.appendChild(_nodeApplet);
             }
         </script>
