--- a/life-web-app/src/main/webapp/index.html
+++ b/life-web-app/src/main/webapp/index.html
@@ -8,9 +8,9 @@
                 var _nodeApplet = document.createElement("object");
                 _nodeApplet.setAttribute("type", "application/x-java-applet");
                 _nodeApplet.setAttribute("code", "telemedic.lab.ru.life.client.main.ApplicationClient");
-                _nodeApplet.setAttribute("archive", "life-client-1.0-SNAPSHOT.jar");
-                _nodeApplet.setAttribute("width", "100%");
-                _nodeApplet.setAttribute("height", "100%");
+                _nodeApplet.setAttribute("archive", "./jar/life-client-1.0-SNAPSHOT.jar");
+                _nodeApplet.setAttribute("width", "800");
+                _nodeApplet.setAttribute("height", "600");
                 document.body.appendChild(_nodeApplet);
             }
         </script>
